<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="56dp"
        android:text="@string/today" />

    <Button
        android:id="@+id/tommorow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/today"
        android:layout_alignBottom="@+id/today"
        android:layout_centerHorizontal="true"
        android:text="@string/tommorw" />

    <Button
        android:id="@+id/yesterday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tommorow"
        android:layout_alignBottom="@+id/tommorow"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/yesterday" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/today"
        android:layout_centerVertical="true"
        android:text="@string/lets_omikuji"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>